Changelog for Audio-MPD

{{$NEXT}}

1.102260  2010-08-14 19:21:51 Europe/Paris
 - new script mpd-rate to rate a song / display current rating

1.100430  2010-02-12 12:51:18 Europe/Paris
 - WARNING: no more makefile.pl supplied, only a build.pl
 - sub::exporter no more used internally

1.093170 Fri Nov 13 19:06:54 2009
 - removed no more used prereq class::accessor
 - revamped pod with podweaver
 - introducing audio::mpd::types
 - using moosex::has::sugar

1.092950 Thu Oct 22 19:34:35 2009
 - module is quite stable now, bumping to 1.yydddn version
 - migrated to moose
 - password() method renamed to set_password()
 - no more vars exported, use 'reuse' and 'once' strings for conntype

**

0.19.10 Wed Oct 21 14:20:09 2009
 - update list of static prereqs, not caught by autoprereq
 - bump min version for test-corpus-audio-mpd

0.19.9 Sun Oct 18 11:49:57 2009
 - using test::corpus::audio::mpd for tests (regains mpd 0.15.x compatibility)

0.19.8 Wed Oct 14 18:05:29 2009
 - migrated to dist-zilla (transparent for end-user)

0.19.7 Wed Sep 30 16:56:37 2009
 - fix #50109 problem with newer class::accessor

0.19.6 Sat Feb 14 13:03:22 CET 2009
 - doc update (catched by streamingmeemee)

0.19.5 Mon Jan  5 15:31:29 CET 2009
 - updated to match mpd 0.14 behaviour
 - doc update

0.19.4 Sat Aug 16 10:38:12 CEST 2008
 - doc update
 - listing mpd-dynamic script prereqs as module prereqs

0.19.3 Tue Aug 12 19:04:23 CEST 2008
 - version() reports *protocol* version, not real mpd version
 - fix some tests that failed because of detection method not precise
   enough (timing issues)

0.19.2 Tue Jun 17 19:24:16 CEST 2008
 - mpd-dynamic should lookup ratings with utf8 encoded pathes

0.19.1 Mon Dec  3 18:23:58 CET 2007
 - new method all_playlists() (courtesy of Joey Hess)
 - fix for filenames / playlists beginning with a space (courtesy of
   Joey Hess)

0.19.0 Thu Nov 29 20:10:18 CET 2007
 - changed constructor api: using a hash for options instead of
   positional paraemters